--- a/css/estilos.css
+++ b/css/estilos.css
@@ -331,6 +331,7 @@ main {
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
+    padding-bottom: 1.5rem;
 }
 .testimony__container {
     display: grid;
@@ -348,11 +349,13 @@ main {
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(10px);
     border-radius: 2rem;
+    padding: 0.5rem;
     gap: 2em;
     grid-column: 2/3;
     grid-row: 1/2;
     opacity: 0 ;
     pointer-events: none;
+    overflow: hidden;
 }
 .testimony__review {
     text-align: center;
@@ -385,6 +388,9 @@ main {
     width: 90%;
     cursor: pointer;
     max-width: 200px;
+    background-color: rgba(255, 255, 255, 0.575);
+    border-radius: 100%;
+        backdrop-filter: blur(10px);
 }
 .subtitle--testimony {
     display: flex;
@@ -412,7 +418,7 @@ main {
     display: grid;
     gap: 2em;
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 10px;
 }
 .questions__padding {
     padding: 0;
@@ -464,6 +470,48 @@ main {
     margin-bottom: 30px;
 }
 
+/*- - - - R E D E S - - - - */
+.nuestras__redes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 5rem;
+}
+.nuestras__redes .redes {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 4rem;
+}
+.nuestras__redes .redes .red{
+    width: auto;
+    height: auto;
+    border-radius: 1rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.nuestras__redes .redes .red a {
+width: 100%;
+height: 100%;
+text-decoration: none;
+}
+.nuestras__redes .redes .red label {
+    font-weight: bold;
+    margin-bottom: 10rem;
+    text-transform: uppercase;
+    color: palevioletred;
+}
+.nuestras__redes .redes .red a img {
+    width: 4rem;
+    height: 4rem;
+    margin-bottom: 1.5rem;
+}
 
 /* - - - B O T O N D E S U B I R - - -*/
 
@@ -702,7 +750,7 @@ main {
         font-size: 2rem;
     }
     .testimony {
-        --pading-container: 60px 0;
+        --pading-container: 0px 0;
     }
     .testimony__arrow {
         width: 100%;
@@ -737,9 +785,9 @@ main {
         padding-top: 3rem;
     }
     .testimony__container {
-        grid-template-columns: 20% 60% 20%;
+        grid-template-columns: 10% 80% 10%;
         padding-top: 0;
-        gap: .9em;
+        gap: .4em;
     }
 }
 
@@ -767,6 +815,11 @@ main {
             width: auto;
             margin: 0 auto;
         }
+        .testimony__container {
+        grid-template-columns: 5% 9% 55%;
+        padding-top: 0;
+        gap: .4em;}
+
         .show .go-top-button {
             width: 3.5rem;
             height: 3.5rem;
@@ -848,7 +901,7 @@ main {
             margin-right: 1rem;
         }
         .testimony__container {
-            grid-template-columns: 20% 60% 20%;
+            grid-template-columns: 10% 80% 10%;
             padding-top: 0;
             gap: .2em;
         }
@@ -856,5 +909,8 @@ main {
             width: 80%;
             margin: 0 auto;
             text-align: center;
+        }
+        .nuestras__redes .redes {
+            gap: 2rem;
         }
     }
