--- a/css/estilos.css
+++ b/css/estilos.css
@@ -472,15 +472,14 @@ main {
 
 /*- - - - R E D E S - - - - */
 .nuestras__redes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    width: 100%;
+    height: auto;
     padding-top: 5rem;
 }
 .nuestras__redes .redes {
     width: auto;
     height: auto;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -489,20 +488,23 @@ main {
 .nuestras__redes .redes .red{
     width: auto;
     height: auto;
+    max-height: 10rem;
     border-radius: 1rem;
     margin: 0 auto;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .nuestras__redes .redes .red a {
-width: 100%;
-height: 100%;
-text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+    margin: 0 auto;
 }
 .nuestras__redes .redes .red label {
     font-weight: bold;
+    margin: 0 auto;
     margin-bottom: 10rem;
     text-transform: uppercase;
     color: palevioletred;
