--- a/css/estilos.css
+++ b/css/estilos.css
@@ -180,8 +180,9 @@ main {
     background-color: #fff;
     background-size: 20px 20px;
     background-position: 0 0,10px 10px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     overflow: hidden;
+    /* background-color: royalblue; */
 }
 .knowledge__container {
     display: grid;
