--- a/css/modal.css
+++ b/css/modal.css
@@ -26,7 +26,7 @@
 .container-modal{
     width: 100%;
     height: 100vh;
-    position: fixed;
+    position:fixed;
     top: 0; left: 0;
     background-color: rgba(216, 112, 147, 0.829);
     display: none;
@@ -38,8 +38,8 @@
     display: flex;
 }
 .content-modal{
-    width: 100%;
-    max-width: 400px;
+    width: 60%;
+    /* max-width: 400px; */
     max-height: 90%;
     padding: 20px;
     background-color: #fff;
@@ -135,15 +135,6 @@
 #btn-modal--polygel:checked ~ .container-modal--polygel{
     display: flex;
 }
-.content-modal--polygel{
-    width: 100%;
-    max-width: 400px;
-    max-height: 90%;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 4px;
-    overflow:scroll;
-}
 .content-modal--polygel h2{
     margin-bottom: 15px;
 }
@@ -230,7 +221,7 @@
     height: 100vh;
     position: fixed;
     top: 0; left: 0;
-    background-color: rgba(216, 112, 147, 0.829);
+    background-color: rgba(46, 9, 114, 0.829);
     display: none;
     justify-content: center;
     align-items: center;
@@ -239,17 +230,7 @@
 #btn-modal--acrilicas:checked ~ .container-modal--acrilicas{
     display: flex;
 }
-.content-modal--acrilicas{
-    width: 100%;
-    max-width: 400px;
-    max-height: 90%;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 4px;
-    overflow:scroll;
-    overflow-y: 0;
 
-}
 .content-modal--acrilicas h2{
     margin-bottom: 15px;
 }
@@ -346,15 +327,7 @@
 #btn-modal--pestanas:checked ~ .container-modal--pestanas{
     display: flex;
 }
-.content-modal--pestanas{
-    width: 100%;
-    max-width: 400px;
-    max-height: 90%;
-    overflow: scroll;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 4px;
-}
+
 .content-modal--pestanas h2{
     margin-bottom: 15px;
 }
@@ -447,15 +420,6 @@
 #btn-modal--semipermanente:checked ~ .container-modal--semipermanente{
     display: flex;
 }
-.content-modal--semipermanente{
-    width: 100%;
-    max-width: 400px;
-    max-height: 90%;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 4px;
-    overflow: scroll;
-}
 .content-modal--semipermanente h2{
     margin-bottom: 15px;
 }
@@ -510,15 +474,6 @@
 }
 #btn-modal--volumen:checked ~ .container-modal--volumen{
     display: flex;
-}
-.content-modal--volumen{
-    width: 100%;
-    max-width: 400px;
-    max-height: 90%;
-    overflow: scroll;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 4px;
 }
 .content-modal--volumen h2{
     margin-bottom: 15px;
@@ -610,15 +565,7 @@
 #btn-modal--lifting:checked ~ .container-modal--lifting{
     display: flex;
 }
-.content-modal--lifting{
-    width: 100%;
-    max-width: 400px;
-    max-height: 90%;
-    overflow: scroll;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 4px;
-}
+
 .content-modal--lifting h2{
     margin-bottom: 15px;
 }
@@ -688,6 +635,134 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*- - - - - V E N  T A N A   M O D A L  S O F T G E L - - - -  -*/
+
+
+
+#btn-modal--softgel{
+    display: none;
+}
+.container-modal--softgel{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0; left: 0;
+    background-color: rgba(216, 112, 147, 0.829);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+#btn-modal--softgel:checked ~ .container-modal--softgel{
+    display: flex;
+}
+.content-modal--softgel h2{
+    margin-bottom: 15px;
+}
+.content-modal--softgel p{
+    padding: 15px 0px;
+    border-top: 1px solid #dbdbdb;
+    border-bottom: 1px solid #dbdbdb;
+}
+.content-modal--softgel .btn-cerrar--softgel{
+    width: 100%;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+}
+.content-modal--softgel .btn-cerrar--softgel label{
+    padding: 7px 10px;
+    background-color: palevioletred;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 300ms ease;
+    font-size: 1.5rem;
+}
+.content-modal--softgel .btn-cerrar--softgel label:hover{
+    background-color:rgb(161, 84, 110);
+}
+.cerrar-modal--softgel{
+    width:100%;
+    height: 100vh;
+    position: absolute;
+    top:0; left: 0;
+    z-index: -1;
+}
+@media screen and (max-width:800px) {
+    .content-modal--softgel{
+        width: 90%;
+    }
+}
+/*:::Fin Ventana Modal:::*/
+
+
+
+/*- - - - - - B O T O N   M O D A L   S O F T G E L    - - - - - - */
+
+
+/*:::Boton-Modal:::*/
+.boton-modal--softgel{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background-color: #fff;
+}
+.boton-modal--softgel label{
+    padding: 10px 15px;
+    background-color: palevioletred;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 300ms ease;
+    font-size: 1.4rem;
+    justify-content: left;
+}
+.boton-modal--softgel label:hover{
+    background-color: rgb(161, 84, 110);
+}
+
+/*- - - - -  FIN  V E N  T A N A   M O D A L  S O F T G E L  - - - -  -*/
 
 
 @media screen and (max-width:800px) {
