Se completo la info de modal polygel y softgel
Se corrigió la información del modal polygel y soft gel

y se pusieron en mayúscula los títulos de los modales

--- a/css/modal.css
+++ b/css/modal.css
@@ -33,6 +33,7 @@
     padding: 20px;
     background-color: #fff;
     border-radius: 4px;
+    text-transform: uppercase;
     position: relative;
     overflow: scroll;
 }
