--- a/css/estilos.css
+++ b/css/estilos.css
@@ -240,6 +240,99 @@ main {
     margin: 0 auto;
 }
 
+/*- - - - - S L I D E R - - - -  -*/
+.slider__box {
+    width: 100%;
+    height: auto;
+    background-color: palevioletred;
+    display: grid;
+        grid-template-columns: repeat( auto-fit, minmax(150px, 1fr) );
+    place-items: center;
+    position: relative;
+}
+.slider__info {
+    width: 100%;
+    text-align: center;
+}
+.slider__info p {
+    font-weight: 500;
+    color: #fff;
+    line-height: 1.7;
+    padding: 1rem;
+}
+.slider__info h2 {
+    background-color: #fff;
+    color: palevioletred;
+    /* border-bottom: 1px solid #fff; */
+    /* font-size: 2rem; */
+    text-transform: uppercase;
+    padding: 1rem;
+}
+.slider {
+    /* width: 21rem; */
+    width: 100%;
+    max-width: 21rem;
+    /* min-width: 15rem; */
+    height: auto;
+    overflow: hidden;
+}
+.slider ul {
+    display: flex;
+    animation: cambio 28s infinite alternate linear;
+    width: 700%;
+    /* padding: 1rem; */
+}
+.slider li {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.slider img {
+    width: 100%;
+    height: auto;
+    /* min-width: 20rem; */
+    /* border-radius: 1rem; */
+    /* border-radius: 2rem; */
+}
+.slider__button {
+    position: absolute;
+    bottom: -1rem;
+    color: palevioletred;
+    border: 2px solid palevioletred;
+    border-radius: 0.5rem;
+    text-decoration: none;
+    font-weight: bold;
+    width: auto;
+    height: auto;
+    padding: 0.5rem;
+    background-color: #fff;
+}
+
+@keyframes cambio {
+    0%{margin-left: 0;}
+    10%{margin-left: 0;}
+
+    15%{margin-left: -100%;}
+    25%{margin-left: -100%;}
+
+    30%{margin-left: -200%;}
+    40%{margin-left: -200%;}
+
+    45%{margin-left: -300%;}
+    55%{margin-left: -300%;}
+
+    60%{margin-left: -400%;}
+    70%{margin-left: -400%;}
+
+    75%{margin-left: -500%;}
+    85%{margin-left: -500%;}
+
+    90%{margin-left: -600%;}
+    100%{margin-left: -600%;}
+}
+
 /* - - - - P R I C E - - - - - */
 
 .price {
@@ -744,6 +837,9 @@ main {
     }
     .subtitle {
         font-size: 1.8rem;
+    }
+    .slider__box {
+        grid-template-columns: 1fr;
     }
     .plan__price {
         font-size: 2rem;
