--- a/css/estilos.css
+++ b/css/estilos.css
@@ -840,6 +840,14 @@ main {
     }
     .slider__box {
         grid-template-columns: 1fr;
+        background-color: #fff;
+    }
+    .slider__info p {
+        color: palevioletred;
+    }
+    .slider__info h2 {
+        background-color: palevioletred;
+        color: #fff;
     }
     .plan__price {
         font-size: 2rem;
